--- a/app/src/main/res/layout/activity_check_miles.xml
+++ b/app/src/main/res/layout/activity_check_miles.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/miles_update"
             android:layout_gravity="center_horizontal"
             android:hint="Current Miles"
             android:paddingTop="20dp" />
