--- a/app/src/main/res/layout/activity_fill_up.xml
+++ b/app/src/main/res/layout/activity_fill_up.xml
@@ -20,21 +20,24 @@
             android:layout_height="wrap_content"
             android:id="@+id/fillup_gallons_text"
             android:layout_gravity="center_horizontal"
-            android:hint="Enter gallons this fill up" />
+            android:hint="Enter gallons this fill up"
+            android:inputType="number" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/fillup_odometer_text"
             android:layout_gravity="center_horizontal"
-            android:hint="Enter miles on odometer" />
+            android:hint="Enter miles on odometer"
+            android:inputType="number" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Get MPG"
             android:id="@+id/get_mpg_button"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:onClick="calculateMPG" />
 
         <TextView
             android:layout_width="wrap_content"
