--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_check_miles"
-        android:id="@+id/button_check_miles"
+        android:id="@+id/main_check_miles"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:onClick="startCheckMilesActivity" />
@@ -21,20 +21,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_fill_up"
-        android:id="@+id/button_fill_up"
-        android:layout_above="@+id/button_check_miles"
-        android:layout_alignLeft="@+id/button_check_miles"
-        android:layout_alignStart="@+id/button_check_miles"
-        android:layout_alignRight="@+id/button_check_miles"
-        android:layout_alignEnd="@+id/button_check_miles"
+        android:id="@+id/main_fill_up"
+        android:layout_above="@+id/main_check_miles"
+        android:layout_alignLeft="@+id/main_check_miles"
+        android:layout_alignStart="@+id/main_check_miles"
+        android:layout_alignRight="@+id/main_check_miles"
+        android:layout_alignEnd="@+id/main_check_miles"
         android:onClick="startFillUpActivity" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_update_vehicle"
-        android:id="@+id/button_update_vehicle"
-        android:layout_below="@+id/button_check_miles"
+        android:id="@+id/main_update_vehicle"
+        android:layout_below="@+id/main_check_miles"
         android:layout_centerHorizontal="true"
         android:onClick="startVehicleInfoActivity" />
 </RelativeLayout>
